tests/fixtures/pass/inherent_temporary_resource_receiver.sali
let Resource = struct(value: i32)

extend Resource {
  let read(borrow self)(): i32 = self.value
}

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let checked = 1 / self.value
    self.value = 0
  }
}

let main(): i32 = Resource(42).read()
